@@ -1,6 +1,9 @@
-FROM openjdk:13
+FROM openjdk:17-bullseye
 EXPOSE 8000
+WORKDIR /app
 
-COPY build/libs/*.jar .
-CMD java -jar *.jar
+RUN apt update && apt install -y postgresql-client less vim && apt clean
+
+COPY target/*.jar /app/
+CMD java --enable-preview -jar *.jar
 
